--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,7 @@
 
     <div class="container">
 
-        <h1>Hello</h1>
-<p>World! This <strong>is</strong> great.</p>
+        <p>Have a great foxy day!</p>
 
 
     </div>
