--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">Home</a>
                     </li>
-                    <li><a href="about.html">About Us</a>
+                     <li><a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li><a href="about.html">About</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
