--- a/about.html
+++ b/about.html
@@ -26,23 +26,46 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#">CB Logo</a>
+                <a href="index.html"> <img src="images/LogoCBmic.jpg"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a>
+                    <li><a href="index.html">Home</a>
                     </li>
-                     <li><a href="portfolio.html">Portfolio</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">All</a>
+                            </li>
+                            <li><a href="#">Branding</a>
+                            </li>
+                            <li><a href="#">Print Design</a>
+                            </li>
+                            <li><a href="#">Stationery</a>
+                            </li>
+                            <li><a href="#">Illustration</a>
+                            </li>
+                        </ul>
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
                     <li><a href="contact.html">Contact</a>
                     </li>
-                </ul>
+                    <li>
+                        <ul class="nav navbar-nav"></ul>
+                        <form class="navbar-form navbar-right" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search"> <span class="glyphicon glyphicon-search"></span>
+                            </div>
+                        </form>
+                    </li>
             </div>
+            </ul>
         </div>
     </div>
-
+    <div class="home-image"></div>
+    </div>
     <div class="container">
 
         <h1>About me</h1>
@@ -50,6 +73,7 @@
 
 
     </div>
+    <footer>...</footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </body>
