--- a/portfolio/stationery/back-to-school.html
+++ b/portfolio/stationery/back-to-school.html
@@ -168,7 +168,7 @@
                             </div>
                             <div class="col-xs-6 thumb">
                                 <figure class="img-overlay">
-                                    <a href="/portfolio/stationery/">
+                                    <a href="/portfolio/illustration/">
                                         <i class="fa fa-plus"></i>
                                         <img src="/images/work3.jpg">
                                     </a>
