--- a/portfolio/illustration/illustration.html
+++ b/portfolio/illustration/illustration.html
@@ -106,7 +106,7 @@
             Illustrations
         </h2>
         <p>The first two works were realized for the “Il Consiglio” magazine with the following theme: Art, Culture and Future. The third work was presented within the exhibition “Greenpeace Guarda Oltre” at the Fortezza da Basso in Florence, Italy. </p>
-<p>Created with Adobe Illustrator, Photoshop and pencil drawing.</p>
+<p>Created starting from pencil drawing with Adobe Illustrator and Photoshop.</p>
 
     </div>
 </div>
