--- a/portfolio/print/calendar.html
+++ b/portfolio/print/calendar.html
@@ -106,7 +106,7 @@
             Calendars
         </h2>
         <p>The calendar layout was created with a practical purpose in mind - enabling notes to be taken on the calendar. The first calendar had a small, A4 format, while the second calendar was larger. </p>
-<p>Created with Adobe Illustrator, InDesign  and pencil drawings.</p>
+<p>Starting from pencil drawings was created with Adobe Illustrator and InDesign.</p>
 
     </div>
 </div>
