--- a/portfolio/print/catalog.html
+++ b/portfolio/print/catalog.html
@@ -101,8 +101,8 @@
         <h2>
             Catalogs
         </h2>
-        <p>The annual report was designed for the Re/Creativ Association and contains 30 pages of content. It showcases ideas and successful initiatives of romanian Grassroots organizations from the field of Education and Social Inclusion, offering visibility and new partnership opportunities for these organizations. The catalog was printed in 1500 copies. </p>
-<p>The layout for both annual report and the catalog was created with Adobe InDesign.</p>
+        <p>The annual report was designed for the Re/Creativ Association and contains 30 pages of content. The second work it showcases ideas and successful initiatives of romanian Grassroots organizations from the field of Education and Social Inclusion, offering visibility and new partnership opportunities for these organizations. The catalog contains 70 pages and was printed in 1500 copies. </p>
+<p>The layout for both annual report and the catalog was prepared in InDesign.</p>
 
     </div>
 </div>
