--- a/portfolio/branding/parco-della-musica.html
+++ b/portfolio/branding/parco-della-musica.html
@@ -87,6 +87,10 @@
                         <img src='parco-della-musica-1.jpg'>
                     </div>
                     
+                    <div class="item">
+                        <img src='parco-della-musica-2.jpg'>
+                    </div>
+                    
         </div>
     </div>
     <div class="col-md-4 item-description"> 
